--- a/DemoPlayer/DetailViewController.xib
+++ b/DemoPlayer/DetailViewController.xib
@@ -10,46 +10,101 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="DemoPlayer" customModuleProvider="target">
             <connections>
+                <outlet property="nextButton" destination="fty-Gx-En8" id="guA-jP-1JT"/>
+                <outlet property="playButton" destination="deL-Ao-fbe" id="YA4-YN-CkQ"/>
                 <outlet property="videoDescription" destination="Ca6-JW-jAT" id="dX1-L6-3dY"/>
                 <outlet property="videoName" destination="Kze-Tg-3KK" id="NQs-2c-XTm"/>
+                <outlet property="videoView" destination="dFk-gc-bCY" id="lcv-Bf-fOo"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="DetailViewController" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Kze-Tg-3KK">
-                    <rect key="frame" x="16" y="309" width="343" height="33.666666666666686"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ca6-JW-jAT">
-                    <rect key="frame" x="16" y="350.66666666666674" width="343" height="282.33333333333326"/>
+                    <rect key="frame" x="16" y="295.66666666666674" width="361" height="479.33333333333326"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                     <color key="textColor" systemColor="labelColor"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fMr-VM-RSb">
+                    <rect key="frame" x="16" y="59" width="361" height="203"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFk-gc-bCY">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="203"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="deL-Ao-fbe" userLabel="PlayButtonView">
+                            <rect key="frame" x="155.66666666666666" y="76.666666666666657" width="50" height="50"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ed4-rQ-mM1">
+                                    <rect key="frame" x="0.0" y="2" width="50" height="46"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="28a-7C-y1t"/>
+                                <constraint firstItem="ed4-rQ-mM1" firstAttribute="leading" secondItem="deL-Ao-fbe" secondAttribute="leading" id="2Yv-il-a3p"/>
+                                <constraint firstAttribute="trailing" secondItem="ed4-rQ-mM1" secondAttribute="trailing" id="DIQ-Ii-XKG"/>
+                                <constraint firstItem="ed4-rQ-mM1" firstAttribute="top" secondItem="deL-Ao-fbe" secondAttribute="top" id="FVi-JS-7gx"/>
+                                <constraint firstAttribute="width" constant="50" id="gEc-uv-O6J"/>
+                                <constraint firstAttribute="bottom" secondItem="ed4-rQ-mM1" secondAttribute="bottom" id="jAn-ls-GeO"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="fMr-VM-RSb" secondAttribute="height" multiplier="16:9" id="FFH-be-Xot"/>
+                        <constraint firstItem="deL-Ao-fbe" firstAttribute="centerY" secondItem="fMr-VM-RSb" secondAttribute="centerY" id="Fj1-DR-DOd"/>
+                        <constraint firstAttribute="bottom" secondItem="dFk-gc-bCY" secondAttribute="bottom" id="RJ3-zy-CHw"/>
+                        <constraint firstAttribute="trailing" secondItem="dFk-gc-bCY" secondAttribute="trailing" id="UHu-3V-yJb"/>
+                        <constraint firstItem="dFk-gc-bCY" firstAttribute="top" secondItem="fMr-VM-RSb" secondAttribute="top" id="bLs-M5-z0Y"/>
+                        <constraint firstItem="dFk-gc-bCY" firstAttribute="leading" secondItem="fMr-VM-RSb" secondAttribute="leading" id="gc7-D3-L1C"/>
+                        <constraint firstItem="deL-Ao-fbe" firstAttribute="centerX" secondItem="fMr-VM-RSb" secondAttribute="centerX" id="qUn-fa-rkh"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Kze-Tg-3KK">
+                    <rect key="frame" x="16" y="262" width="361" height="33.666666666666686"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fty-Gx-En8">
+                    <rect key="frame" x="301.66666666666669" y="783" width="75.333333333333314" height="35"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="chevron.forward" catalog="system" title="Next"/>
+                    <connections>
+                        <action selector="nextButtonAction:" destination="-1" eventType="touchUpInside" id="E3x-B5-cFR"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="Kze-Tg-3KK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="1DN-xT-6ej"/>
-                <constraint firstItem="Kze-Tg-3KK" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="250" id="22l-4Y-fVo"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Kze-Tg-3KK" secondAttribute="trailing" constant="16" id="7xg-ra-bq1"/>
-                <constraint firstItem="Ca6-JW-jAT" firstAttribute="top" secondItem="Kze-Tg-3KK" secondAttribute="bottom" constant="8" symbolic="YES" id="JSn-bM-xt0"/>
+                <constraint firstItem="Ca6-JW-jAT" firstAttribute="top" secondItem="Kze-Tg-3KK" secondAttribute="bottom" id="JSn-bM-xt0"/>
+                <constraint firstItem="fMr-VM-RSb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Nmb-z7-SVr"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="fMr-VM-RSb" secondAttribute="trailing" constant="16" id="VVz-Eh-tDf"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="fty-Gx-En8" secondAttribute="bottom" priority="250" id="Weg-ew-ayt"/>
+                <constraint firstItem="Kze-Tg-3KK" firstAttribute="top" secondItem="fMr-VM-RSb" secondAttribute="bottom" id="YR4-Ur-oRA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="fty-Gx-En8" secondAttribute="trailing" constant="16" id="aRt-n8-vzJ"/>
                 <constraint firstItem="Ca6-JW-jAT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="nf1-0o-xvy"/>
-                <constraint firstItem="Ca6-JW-jAT" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="sMc-Rj-KVf"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ca6-JW-jAT" secondAttribute="trailing" constant="16" id="snv-5w-E4b"/>
+                <constraint firstItem="fty-Gx-En8" firstAttribute="top" secondItem="Ca6-JW-jAT" secondAttribute="bottom" constant="8" symbolic="YES" id="yrQ-HZ-iwv"/>
+                <constraint firstItem="fMr-VM-RSb" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="zGH-Zy-YXa"/>
             </constraints>
             <point key="canvasLocation" x="139.69465648854961" y="19.718309859154932"/>
         </view>
     </objects>
     <resources>
+        <image name="chevron.forward" catalog="system" width="97" height="128"/>
+        <image name="play.fill" catalog="system" width="117" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
