--- a/DemoPlayer/DetailViewController.xib
+++ b/DemoPlayer/DetailViewController.xib
@@ -77,7 +77,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fty-Gx-En8">
                     <rect key="frame" x="301.66666666666669" y="783" width="75.333333333333314" height="35"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" image="chevron.forward" catalog="system" title="Next"/>
+                    <buttonConfiguration key="configuration" style="plain" image="chevron.forward" catalog="system" imagePlacement="trailing" title="Next"/>
                     <connections>
                         <action selector="nextButtonAction:" destination="-1" eventType="touchUpInside" id="E3x-B5-cFR"/>
                     </connections>
